<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carSaveFragment"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/fragment_background"
    tools:context=".carSave" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/carName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicleName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/carNameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/vehicleNameHint"/>

        <TextView
            android:id="@+id/fuelWasting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuelWasting"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/fuelWastingEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/fuelWastingHint"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/frg_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/save"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="30sp"/>

    </LinearLayout>
</FrameLayout>