<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".noSavedCar"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/kacKmSoru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kacKmGidilecek"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/kacKmCevap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="KM"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/kacLSoru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kacL"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="#000000"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/kacLCevap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="L"
                android:textAlignment="center"
                android:gravity="center_horizontal" />


            <EditText
                android:id="@+id/gnclFyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/guncelFiyatManual"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/button"
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:background="@drawable/buttonshape"
                android:textColor="#ffff"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="@string/calculate" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/tahminiSure"
                    android:textColor="#000"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="italic"
                    android:text="@string/tiklaOc"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="@string/fiyatInfoText"
                    android:textColor="#000"
                    />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tiklaOc"
                    android:textAlignment="center"

                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:text="@string/yakilacakYakit"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="italic"
                    android:text="@string/tiklaOc"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-8379310124540160/4304779461" />

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/shellButton"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:text="SHELL YAKIT FİYATLARI"
                android:drawableLeft="@drawable/ic_shell_4_logo_svgrepo_com" />

            <Button
                android:id="@+id/bpButton"
                android:layout_width="match_parent"
                android:background="@drawable/buttonshape"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:text="BP YAKIT FİYATLARI"
                android:drawableLeft="@drawable/ic_bp_helios_logo"/>

            <Button
                android:id="@+id/aytemizButton"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/buttonshape"
                android:layout_height="wrap_content"
                android:text="AYTEMİZ YAKIT FİYATLARI"
                android:drawableLeft="@drawable/ic__aytemizlogo"/>

            <Button
                android:id="@+id/totalButton"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:background="@drawable/buttonshape"
                android:layout_height="wrap_content"
                android:text="TOTAL YAKIT FİYATLARI"
                android:drawableLeft="@drawable/ic_totallogo"/>

        </LinearLayout>
    </ScrollView>




</FrameLayout>